--- a/Client/categories.html
+++ b/Client/categories.html
@@ -32,35 +32,35 @@
     </div>
     <div class="all-categories">
         <div class="category">
-            <a href="recipes.html?category=chicken" data-type="category" data-value="chicken"><img src="assets/recipe-images/chicken-meat.jpeg"></a>
+            <a href="recipes.html?category=chicken" data-type="type_of_meat" data-value="chicken"><img src="assets/recipe-images/chicken-meat.jpeg"></a>
             <h3>Chicken Dishes</h3>
         </div>
         <div class="category">
-            <a href="recipes.html?category=beef" data-type="category" data-value="beef"><img src="assets/recipe-images/beef-meat.jpeg"></a>
+            <a href="recipes.html?category=beef" data-type="type_of_meat" data-value="beef"><img src="assets/recipe-images/beef-meat.jpeg"></a>
             <h3>Beef Dishes</h3>
         </div>
         <div class="category">
-            <a href="recipes.html?category=pork" data-type="category" data-value="pork"><img src="assets/recipe-images/pork-meat.jpeg"></a>
+            <a href="recipes.html?category=pork" data-type="type_of_meat" data-value="pork"><img src="assets/recipe-images/pork-meat.jpeg"></a>
             <h3>Pork Dishes</h3>
         </div>
         <div class="category">
-            <a href="recipes.html?category=seafood" data-type="category" data-value="seafood"><img src="assets/recipe-images/seafood.jpeg"></a>
+            <a href="recipes.html?category=seafood" data-type="type_of_meat" data-value="seafood"><img src="assets/recipe-images/seafood.jpeg"></a>
             <h3>Seafood Dishes</h3>
         </div>
         <div class="category">
-            <a href="recipes.html?category=quick_and_easy" data-type="category" data-value="quick_and_easy"><img src="assets/recipe-images/soup.jpeg"></a>
+            <a href="recipes.html?category=quick_and_easy" data-type="prepTime" data-value="quick_and_easy"><img src="assets/recipe-images/soup.jpeg"></a>
             <h3>Quick and Easy!</h3>
         </div>
         <div class="category">
-            <a href="recipes.html?category=starter" data-type="category" data-value="starter"><img src="assets/recipe-images/starter.jpeg"></a>
+            <a href="recipes.html?category=starter" data-type="course" data-value="starter"><img src="assets/recipe-images/starter.jpeg"></a>
             <h3>Starters</h3>
         </div>
         <div class="category">
-            <a href="recipes.html?category=main" data-type="category" data-value="main"><img src="assets/recipe-images/main-course.jpeg"></a>
+            <a href="recipes.html?category=main" data-type="course" data-value="main"><img src="assets/recipe-images/main-course.jpeg"></a>
             <h3>Main Courses</h3>
         </div>
         <div class="category">
-            <a href="recipes.html?category=dessert" data-type="category" data-value="dessert"><img src="assets/recipe-images/dessert.jpeg"></a>
+            <a href="recipes.html?category=dessert" data-type="course" data-value="dessert"><img src="assets/recipe-images/dessert.jpeg"></a>
             <h3>Desserts</h3>
         </div>
     </div>
